# Winters_Engine

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CLAUDE_Legacy.md  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  UpdateLib.bat  Winters.sln  _scratch_unpack_selected_archive.ps1  limgrave_lineup_log.txt  limgrave_showcase_log.txt  limgrave_spawn_failed_assets.txt  profiler.json  refactoring.md
.claude/: gotchas.md
.github/workflows/: aws-staging-deploy.yml  backend-ci.yml
.md/: 계획서작성규칙.md
.md/EldenRing/: 00_ELDENRING_INDEX.md  01_CLIENT_SPLIT_ENGINE_BOUNDARY.md  02_ASSET_EXTRACTION_TO_WINTERS_BINARY_PIPELINE.md  03_ELDEN_CLIENT_RUNTIME_ARCHITECTURE.md  04_WORLD_PARTITIONING_STREAMING.md  05_NETWORK_PVP_COOP_RAID_SERVER_AUTH.md  06_FX_GRAPH_SEQUENCER_EDITOR.md  07_ASSET_LOADER_AND_STREAMING_RUNTIME.md  08_SESSION_ROADMAP.md  09_ASSET_EXTRACTION_SURVEY_2026_05_25.md  10_ASSET_PIPELINE_TOOLING.md  11_SHARED_RHI_RENDERING_ENTRY.md  12_UE5_REFERENCE_DX12_RHI_EDITOR_BIG_PICTURE.md  13_HKX_ANIMATION_PIPELINE.md  14_PIPELINE_V2_RUNTIME_CONTRACT.md  15_DESKTOP_TRANSFER_PACKAGE.md  15_TEAM_2MONTH_FULL_BINARYIZE_PLAN.md  16_CODEX_BOOTSTRAP_PROMPT.md  16_LIMGRAVE_VERTICAL_SLICE_RECONSTRUCTION.md  17_UE5_GRADE_EDITOR_SUITE_MASTER.md  18_WORLD_EDITOR_DESIGN.md  19_FX_NIAGARA_DESIGN.md  20_SEQUENCER_DESIGN.md  21_WORLD_PARTITION_DESIGN.md  22_BOSS_TESTING_DESIGN.md
.md/GameDesign/: CLASS_AND_SERVANT_DESIGN.md
.md/TODO/: 2026-05-09_AI_SERVER_AUTHORITY_CHECKPOINT.md
.md/architecture/: CLASS_SERVANT_FOUNDATION_DIRECTION.md  WINTERS_CODEBASE_COMPASS.md  WINTERS_COMPANY_SCALE_FOLDER_ESSENCE.md  WINTERS_DATA_ARCHITECTURE.md  WINTERS_DEPENDENCY_MAP.md  WINTERS_DESIGN_PHILOSOPHY.md  WINTERS_ENGINE_CONVENTIONS.md  WINTERS_ENGINE_INTEGRATION_REVIEW.md  WINTERS_ERROR_HANDLING_POLICY.md  WINTERS_HANDOFF_GUIDE.md  WINTERS_IMGUI_TOOL_DESIGN_GUIDE.md  (+7 more)
.md/문서/: 00_INDEX.md  (+18 more)
.toolkit/: README.md
Client/: README.md
Data/: README.md  Stage1.navgrid
EldenRingClient/: CMakeLists.txt
EldenRingClient/Include/: EldenRingClient.vcxproj  EldenRingClient.vcxproj.filters
EldenRingClient/Private/: EldenAssetProbeScene.cpp  EldenLimgraveShowcaseScene.cpp  EldenRingApp.cpp  EldenRingRHITestCubeRenderer.cpp  main.cpp
EldenRingClient/Public/: EldenLimgraveShowcaseScene.h  EldenRingApp.h  EldenRingProbeScene.h  EldenRingRHITestCubeRenderer.h
EldenRingEditor/: CMakeLists.txt
EldenRingEditor/Private/: EldenRingEditorApp.cpp  EldenRingEditorScene.cpp  main.cpp
EldenRingEditor/Private/World/: EditorTransaction.cpp  WorldCellDocument.cpp
EldenRingEditor/Public/: EldenRingEditorApp.h  EldenRingEditorScene.h
EldenRingEditor/Public/World/: EditorTransaction.h  WorldCellDocument.h
Engine/: README.md
LoLEditor/: CMakeLists.txt
LoLEditor/Private/: LoLEditorApp.cpp  LoLMapEditorScene.cpp  main.cpp
LoLEditor/Private/World/: LoLStageDocument.cpp
LoLEditor/Public/: LoLEditorApp.h  LoLMapEditorScene.h
LoLEditor/Public/World/: LoLStageDocument.h
Plan/: S000_ACTION_LOCK_AUTHORITY_SESSION_20260711.md  S000_VIEGO_ACTION_LOCK_RESULT_20260711.md  S000_VIEGO_SOUL_POSSESSION_SESSION_20260711.md  S001_MINION_MOVEMENT_TARGETING_ATTACK_ANIMATION_SESSION_20260711.md  S001_MINION_NAVGRID_RESULT_20260711.md  S002_AI_NAVGRID_COMBAT_BOUNDARY_SESSION_20260711.md  S003_MAP_BUSH_AMBIENT_RESTORE_RESULT_20260711.md  S003_MAP_BUSH_AMBIENT_RESTORE_SESSION_20260711.md  S004_LOADING_RESPONSIVENESS_HUD_BUSH_RETIREMENT_RESULT_20260711.md  S004_LOADING_RESPONSIVENESS_HUD_BUSH_RETIREMENT_SESSION_20260711.md  S005_S004_VERIFICATION_GATE_AND_LANE_SPLIT_SESSION_20260711.md  S006_MINION_ATTACK_MINIMAP_FALLBACK_RETIREMENT_RESULT_20260711.md  S006_MINION_ATTACK_MINIMAP_FALLBACK_RETIREMENT_SESSION_20260711.md  S007_RUNTIME_OPTIMIZATION_SHOP_PROFILER_MINIMAP_RESULT_20260711.md  S007_RUNTIME_OPTIMIZATION_SHOP_PROFILER_MINIMAP_SESSION_20260711.md  S008_SERVER_AUTHORITATIVE_CC_CHAMPION_EXPANSION_SESSION_20260711.md  S009_150_CHAMPION_DATA_PIPELINE_AND_PRACTICE_TOOL_RESULT_20260712.md  S009_150_CHAMPION_DATA_PIPELINE_AND_PRACTICE_TOOL_SESSION_20260712.md  S00_SERVER_RUNTIME_ESSENCE_PLAN.md  S014_DESIGNER_SIM_CONSOLE_AND_CHRONO_BREAK_FOUNDATION_SESSION_20260712.md  S015_CHRONO_BREAK_KEYFRAME_REWIND_RESULT_20260712.md  S015_CHRONO_BREAK_KEYFRAME_REWIND_SESSION_20260712.md  S016_MODEL_ANIM_LAB_RESULT_20260712.md  S016_MODEL_ANIM_LAB_SESSION_20260712.md  S01_ELDEN_RING_RESTORATION_ESSENCE_PLAN.md  S020_AI_PANEL_MINIMAP_SKILL_INTERVAL_RESULT_20260713.md  S020_AI_PANEL_MINIMAP_SKILL_INTERVAL_SESSION_20260713.md  S02_OPENAI_STYLE_BOT_AI_ENVIRONMENT_PLAN.md  S030_ACCOUNT_DB_SHOP_MYINFO_REPLAY_SETTINGS_YASUO_FX_RESULT_20260714.md  S030_ACCOUNT_DB_SHOP_MYINFO_REPLAY_SETTINGS_YASUO_FX_SESSION_20260714.md  S031_INGAME_WIRING_SETTINGS_YASUO_FX_SESSION_20260714.md  S031_UDP_ADAPTIVE_RTO_CHAOS_HARNESS_RESULT_20260714.md  S032_ITEM_SHOP_EDITOR_TELEPORT_ATLAS_RESULT_20260714.md  S033_ENVIRONMENT_NUMBERS_ECONOMY_FIDELITY_RESULT_20260714.md  S035_GAME_END_LIFECYCLE_AND_TURRET_ZFIGHT_SESSION_20260715.md  S036_SOUND_BOTAI_STUCK_JUNGLE_FIX_RESULT_20260715.md  S036_SOUND_BOTAI_STUCK_JUNGLE_FIX_SESSION_20260715.md  S03_MINIMAP_CAMERA_JUMP_RESULT.md  S03_MINIMAP_CAMERA_JUMP_SESSION.md
Profiles/: profiler_20260614_223746.json
Server/: README.md
Services/: .env.example  Dockerfile  Makefile  README.md  StartBackend.ps1  docker-compose.yml  go.mod  go.sum
Shaders/: ContactShadowPlane.hlsl  Default3D.hlsl  FogOfWarWorld.hlsl  FxMesh.hlsl  FxSprite.hlsl  Mesh3D.hlsl  Mesh3D_PBR.hlsl  Skinned3D.hlsl  Skinned3D_PBR.hlsl  Triangle.hlsl  UIPlane.hlsl
Shared/: README.md
Tools/: README.md  VerifyEntityGeneration.ps1  VerifyMinionProjectileAssets.ps1  VerifyPingWheelAssets.ps1  VerifyPullRepro.ps1  audit_map11_foliage.py  convert_all_assets.bat  convert_all_assets.ps1  convert_all_wmesh.bat  cook_map11_ambient_props.py  cook_map11_brush_volumes.py  generate_itemshop_catalog_from_reference.py
cmake/: README.md  WintersCompilerOptions.cmake  WintersEngine.cmake  WintersThirdParty.cmake  WintersWorkspaceMap.cmake
winters-skills/: README.md  TODO.md
(+2522 files in other folders)
